--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
     "axios": "0.18.1",
     "glamor": "2.20.40",
     "glamorous": "4.13.0",
-    "lodash": "4.17.11",
+    "lodash": ">=4.17.13",
     "log4js": "^4.3.1",
     "react": "16.3.2",
     "react-dom": "16.3.3",
